opam-version: "2.0"
maintainer: "David Kaloper Meršinjak <david@numm.org>"
authors: "David Kaloper Meršinjak <david@numm.org>"
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirleft/ocaml-asn1-combinators"
doc: "https://mirleft.github.io/ocaml-asn1-combinators/doc"
bug-reports: "https://github.com/mirleft/ocaml-asn1-combinators/issues"
dev-repo: "git+https://github.com/mirleft/ocaml-asn1-combinators.git"
synopsis: "Embed typed ASN.1 grammars in OCaml"
description: """
asn1-combinators is a library for expressing ASN.1 in OCaml. Skip the notation
part of ASN.1, and embed the abstract syntax directly in the language. These
abstract syntax representations can be used for parsing, serialization, or
random testing.

The only ASN.1 encodings currently supported are BER and DER.
"""

depends: [
  "ocaml" {>= "4.02.0"}
  "dune" {build}
  "result"
  "cstruct" {>= "1.6.0"}
  "zarith"
  "ptime"
  "ounit" {with-test}
  "cstruct-unix" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest"] {with-test}
]
